# sl

./: .gitignore  CMakeLists.txt  Makefile  README.md  console_player  doc.md  main.cpp  sl.config
doc/: display_interface.md  get_music_directory.md  get_playlist.md  main.md  play_mp3.md
global/: global.h  globals.h
service/: Music.cpp  Music.h  get_music_directory_from_config.cpp  get_music_directory_from_config.h  get_playlist.cpp  get_playlist.h  handle_input.cpp  handle_input.h  play_mp3.cpp  play_mp3.h  play_playlist.cpp  play_playlist.h
ui/: Ui.cpp  Ui.h  display_interface.cpp  display_interface.h
